ACLOCAL_AMFLAGS = -I m4

SUBDIRS = examples include src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = guichan-0.8.pc

EXTRA_DIST = guichan-0.8.pc.in \
             guichan.pc.in \
             guichan_allegro.pc.in \
             guichan_opengl.pc.in \
             guichan_sdl.pc.in \
             CMakeLists.txt \
             CMake/Modules/FindAllegro.cmake
