ACLOCAL_AMFLAGS = -I m4

SUBDIRS = examples include src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = guichan.pc

EXTRA_DIST = guichan.pc.in \
             guichan_allegro.pc.in \
             guichan_irrlicht.pc.in \
             guichan_opengl.pc.in \
             guichan_sdl.pc.in \
             CMakeLists.txt \
             CMake/Modules/FindAllegro.cmake
